--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "node-sass": "^9.0.0",
     "nodemon": "^3.0.2"
